classDiagram
    direction LR
    class Client {
        + main()
    }
    class ObjectFactory {

    }
    class PaymentService {
        + prepare()
    }
    class ExchangeRateProvider {
        <<interface>>
        + getExchangeRate()
    }
    class HttpApiExchangeRateProvider {
        + getExchangeRate()
    }

    class SimpleExchangeRateProvider {
        + getExchangeRate()
    }

    Client ..> ObjectFactory :요청
    Client ..> PaymentService :사용
    ObjectFactory ..> HttpApiExchangeRateProvider :생성
    ObjectFactory ..> PaymentService :생성/전달
    PaymentService ..> ExchangeRateProvider :사용
    ExchangeRateProvider <|.. HttpApiExchangeRateProvider
    ExchangeRateProvider <|.. SimpleExchangeRateProvider